chore: update TODOs, disable Hibernate OSIV, add JVM native access, and document improvement strategies